[package]
name = "extra-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }